# plaid-ledger-recon

./: .env.example  .gitignore  Dockerfile.demo  LICENSE  Makefile  README.md  cli.py  docker-compose.demo.yml  docker-compose.yml  green_implementation.patch  pyproject.toml  pytest.ini  requirements-core.txt
.github/workflows/: ci.yml
docs/: ADR-001-LIVING.md  AI_COLLABORATION.md  ARCHITECTURE.md  BEST_PRACTICES.md  COA.md  CONFIGURATION.md  CONTROLS.md  ONBOARDING.md  RUNBOOK.md  SCHEMA.md  SECURITY.md
etl/: __init__.py  coa.yaml  demo.py  extract.py  http_guard.py  load.py  reconcile.py  schema.sql  schema_sqlite.sql  seed_coa.sql  sqlite_shim.sql  transform.py
etl/connectors/: __init__.py  plaid_client.py
etl/reports/: __init__.py  render.py  utils.py
etl/reports/static/: deterministic.css
etl/reports/templates/: balance_sheet.html.j2  base.html.j2  cash_flow.html.j2
fixtures/demo/: account_links.json  accounts.json  balances_2024q1.json  ingest_accounts.json  journal_entries.json  journal_lines.json  plaid_accounts.json
migrations/: 002_step_b_composite_pk.sql  backfill_item_ids.sql
tests/: __init__.py  conftest.py  test_cli.py  test_cli_list_plaid_accounts.py  test_e2e.py  test_e2e_comprehensive.py  test_extract.py  test_load.py  test_load_fk.py  test_load_fk_postgres.py  test_mapping_required.py  test_no_egress.py  test_onboard.py  test_reconcile.py  test_reconcile_balances_override.py  test_reconcile_cli.py  test_reconcile_events.py  test_reconcile_m6.py  test_reconcile_period.py  test_reconcile_pure.py  test_report_cli_skeleton.py  test_reports.py  test_schema_contract.py  test_schema_fk.py  test_schema_fk_postgres.py  test_schema_guard.py  test_schema_indexes_postgres.py  test_schema_indexes_sqlite.py  test_transform.py
tests/fixtures/: report_seed.sql
tests/golden/: bs_2024Q1.html  cf_2024Q1.html
tests/utils/: __init__.py  db_helper.py  hash.py
