[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "plaid-ledger-recon"
version = "0.1.0"
description = "Audit-ready financial ETL: Plaid → Postgres → Reconciled Reports"
authors = [{name = "Frank Tang"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "typer>=0.9.0",
    "httpx>=0.24.0",
    "psycopg[binary]>=3.1.0",
    "sqlalchemy>=2.0.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "jinja2>=3.1.0",
    "weasyprint>=59.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "respx>=0.20.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
]

[project.scripts]
pfetl = "cli:app"

[tool.hatch.build.targets.wheel]
packages = ["etl"]

[tool.ruff]
target-version = "py311"
line-length = 88
src = ["etl", "tests"]
fix = true
unsafe-fixes = false

[tool.ruff.lint]
select = [
  "E","W","F","I","N","UP","ANN","S","B","A","C4","DTZ","T10","EM","G","PIE",
  "T20","Q","RSE","RET","SLF","SIM","TID","TCH","INT","ARG","PTH","TD","PGH",
  "PL","TRY","FLY","PERF","FURB","RUF"
]
ignore = ["S101"]

[tool.ruff.lint.isort]
known-first-party = ["etl"]

[tool.ruff.lint.per-file-ignores]
"etl/__init__.py" = ["F401"]
"etl/extract.py" = ["ARG001"]
"cli.py" = ["ARG001", "T201"]
"tests/**/*.py" = ["S101", "PLR2004", "ANN", "T201"]

[tool.ruff.format]
preview = true
docstring-code-format = true

[tool.mypy]
python_version = "3.11"
strict = true
warn_unreachable = true
plugins = [
  "pydantic.mypy",
  "sqlalchemy.ext.mypy.plugin",
]

[[tool.mypy.overrides]]
module = "weasyprint.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]